# undep

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/undep/: __main__.py
src/: main.rs
